[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/MainMenu/ButtonGrid.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]

[sub_resource type="ButtonGroup" id=1]
resource_name = "CharModifierBtns"

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 0 )
scale = Vector2( 1, 1 )

[node name="Labels" type="GridContainer" parent="."]
margin_left = -392.0
margin_top = -136.0
margin_right = -242.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotate" type="Label" parent="Labels"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
text = "ROTATE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arms" type="Label" parent="Labels"]
margin_top = 44.0
margin_right = 150.0
margin_bottom = 84.0
rect_min_size = Vector2( 150, 40 )
text = "ARMS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upper" type="Label" parent="Labels"]
margin_top = 88.0
margin_right = 150.0
margin_bottom = 128.0
rect_min_size = Vector2( 150, 40 )
text = "UPPER_BODY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lower" type="Label" parent="Labels"]
margin_top = 132.0
margin_right = 150.0
margin_bottom = 172.0
rect_min_size = Vector2( 150, 40 )
text = "LOWER_BODY"
align = 1
valign = 1

[node name="Shoes" type="Label" parent="Labels"]
margin_top = 176.0
margin_right = 150.0
margin_bottom = 216.0
rect_min_size = Vector2( 150, 40 )
text = "SHOES"
align = 1
valign = 1

[node name="Hair" type="Label" parent="Labels"]
margin_top = 220.0
margin_right = 150.0
margin_bottom = 260.0
rect_min_size = Vector2( 150, 40 )
text = "HAIR"
align = 1
valign = 1

[node name="Moustache" type="Label" parent="Labels"]
margin_top = 264.0
margin_right = 150.0
margin_bottom = 304.0
rect_min_size = Vector2( 150, 40 )
text = "MOUSTACHE"
align = 1
valign = 1

[node name="ButtonGrid" type="GridContainer" parent="."]
margin_left = -208.0
margin_top = -136.0
margin_right = -80.0
margin_bottom = 160.0
custom_constants/vseparation = 5
custom_constants/hseparation = 10
columns = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateLeft" type="Button" parent="ButtonGrid"]
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateRight" type="Button" parent="ButtonGrid"]
margin_left = 60.0
margin_right = 110.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleArmsPrev" type="Button" parent="ButtonGrid"]
margin_top = 45.0
margin_right = 50.0
margin_bottom = 85.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleArmsNext" type="Button" parent="ButtonGrid"]
margin_left = 60.0
margin_top = 45.0
margin_right = 110.0
margin_bottom = 85.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleUpperPrev" type="Button" parent="ButtonGrid"]
margin_top = 90.0
margin_right = 50.0
margin_bottom = 130.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleUpperNext" type="Button" parent="ButtonGrid"]
margin_left = 60.0
margin_top = 90.0
margin_right = 110.0
margin_bottom = 130.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleLowerPrev" type="Button" parent="ButtonGrid"]
margin_top = 135.0
margin_right = 50.0
margin_bottom = 175.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleLowerNext" type="Button" parent="ButtonGrid"]
margin_left = 60.0
margin_top = 135.0
margin_right = 110.0
margin_bottom = 175.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleshoesPrev" type="Button" parent="ButtonGrid"]
margin_top = 180.0
margin_right = 50.0
margin_bottom = 220.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleShoesNext" type="Button" parent="ButtonGrid"]
margin_left = 60.0
margin_top = 180.0
margin_right = 110.0
margin_bottom = 220.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleHairPrev" type="Button" parent="ButtonGrid"]
margin_top = 225.0
margin_right = 50.0
margin_bottom = 265.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleHairNext" type="Button" parent="ButtonGrid"]
margin_left = 60.0
margin_top = 225.0
margin_right = 110.0
margin_bottom = 265.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleMoustachePrev" type="Button" parent="ButtonGrid"]
margin_top = 270.0
margin_right = 50.0
margin_bottom = 310.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleMoustacheNext" type="Button" parent="ButtonGrid"]
margin_left = 60.0
margin_top = 270.0
margin_right = 110.0
margin_bottom = 310.0
rect_min_size = Vector2( 50, 40 )
group = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonGrid/RotateLeft" to="ButtonGrid" method="_on_RotateLeft_pressed"]
[connection signal="pressed" from="ButtonGrid/RotateRight" to="ButtonGrid" method="_on_RotateRight_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleArmsPrev" to="ButtonGrid" method="_on_ToggleArmsPrev_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleArmsNext" to="ButtonGrid" method="_on_ToggleArmsNext_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleUpperPrev" to="ButtonGrid" method="_on_ToggleUpperPrev_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleUpperNext" to="ButtonGrid" method="_on_ToggleUpperNext_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleLowerPrev" to="ButtonGrid" method="_on_ToggleLowerPrev_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleLowerNext" to="ButtonGrid" method="_on_ToggleLowerNext_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleshoesPrev" to="ButtonGrid" method="_on_ToggleshoesPrev_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleShoesNext" to="ButtonGrid" method="_on_ToggleShoesNext_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleHairPrev" to="ButtonGrid" method="_on_ToggleHairPrev_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleHairNext" to="ButtonGrid" method="_on_ToggleHairNext_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleMoustachePrev" to="ButtonGrid" method="_on_ToggleMoustachePrev_pressed"]
[connection signal="pressed" from="ButtonGrid/ToggleMoustacheNext" to="ButtonGrid" method="_on_ToggleMoustacheNext_pressed"]
